# nyuwaymcpscanner

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  nyuwaymcpscanner_project.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
nyuwaymcpscanner/cli/: main.py
nyuwaymcpscanner/output/: json_report.py  sarif_report.py  scoring.py  terminal.py
nyuwaymcpscanner/rules/: mcp_threats.yar
nyuwaymcpscanner/scanners/: llm_safety.py  manifest.py  secrets.py  supply_chain.py  virustotal.py  yara_engine.py
nyuwaymcpscanner/setup/: local_llm.py
nyuwaymcpscanner/sources/: __init__.py  _archive.py  config.py  github.py  local.py  npm.py  pypi.py
tests/: conftest.py  test_cli.py  test_config.py  test_integration_fixtures.py  test_llm_safety.py  test_manifest.py  test_output.py  test_safety_guards.py  test_scoring.py  test_secrets.py  test_setup.py  test_sources.py  test_supply_chain.py  test_yara_engine.py
tests/fixtures/: README.md
tests/fixtures/vulnerable_aws_key/: config.py  mcp.json
tests/fixtures/vulnerable_exfil_endpoint/: mcp.json  server.py
tests/fixtures/vulnerable_hardcoded_secrets/: config.py  mcp.json
tests/fixtures/vulnerable_mixed_critical/: mcp.json  server.py
tests/fixtures/vulnerable_shell_exec/: mcp.json  server.py
tests/fixtures/vulnerable_tool_poisoning/: mcp.json
tests/fixtures/vulnerable_typosquat_deps/: requirements.txt
