[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nyuwaymcpscanner"
version = "0.1.0"
description = "Enterprise security scanner for Model Context Protocol (MCP) servers"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
    { name = "Nyuway AI", email = "security@nyuway.ai" },
]
maintainers = [
    { name = "Nyuway AI", email = "security@nyuway.ai" },
]
keywords = [
    "mcp",
    "model-context-protocol",
    "security",
    "scanner",
    "static-analysis",
    "yara",
    "secrets",
    "supply-chain",
    "ai-security",
    "llm-security",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Typing :: Typed",
]
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "yara-python>=4.3",
    "requests>=2.31",
    "litellm>=1.40",
]

[project.urls]
Homepage = "https://nyuway.ai"
Documentation = "https://nyuway.ai/mcp-scanner/docs"
Repository = "https://github.com/Nyuway-Cybersecurity/nyuwaymcpscanner"
"Bug Tracker" = "https://github.com/Nyuway-Cybersecurity/nyuwaymcpscanner/issues"
Changelog = "https://github.com/Nyuway-Cybersecurity/nyuwaymcpscanner/releases"
"Deep Scan Waitlist" = "https://nyuway.ai/mcp-scanner/access"

[project.scripts]
nyuwaymcpscanner = "nyuwaymcpscanner.cli.main:cli"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.setuptools.packages.find]
where = ["."]
include = ["nyuwaymcpscanner*"]
